--- a/pages-css/horizon.css
+++ b/pages-css/horizon.css
@@ -134,6 +134,7 @@
   width: 100%; /* Set to twice the width of the container */
   gap: 3%;
   animation: scroll-1 40s linear infinite;
+  animation-play-state:running;
 }
 
 .sponsor-card {
@@ -143,6 +144,10 @@
 .sponsor-card img {
   width: 100%;
   height: 100%;
+}
+.sponsor-card img:hover{
+  transform: translateY(-20px);
+  cursor: pointer;
 }
 
 @keyframes scroll-1 {
