--- a/style.css
+++ b/style.css
@@ -209,9 +209,12 @@ header {
 /* Landing Body */
 .landing {
   width: 100%;
-  height: 100vh;
+  height: auto;
   padding-top: 3%;
   padding-left: 2%;
+
+  margin-bottom: 5%;
+
 }
 @media screen and (max-width: 1100px) {
   .landing {
@@ -942,13 +945,14 @@ header {
   transform: translateY(0);
 }
 .flagship-card:hover{
-  cursor: pointer;
   transition-duration: 0.2s;
   transform: translateY(-10px);
 }
+#flagship-card-upper:hover{
+  cursor: pointer;
+}
 .flagship-card-lower{
   transform: translateY(50px);
-
 }
 
 @media screen and (max-width:800px){
