--- a/style.css
+++ b/style.css
@@ -326,7 +326,8 @@ header {
   align-items: center;
   justify-content: center;
   font-family: "Ikaros Sans", sans-serif;
-  min-width: 420px;
+  max-width: 420px;
+  min-width: 400px;
   height: 17rem;
   border-radius: 2rem;
   border: 1px solid rgba(255, 255, 255, 0.256);
@@ -545,6 +546,8 @@ header {
   height: auto;
   width: 100%;
 
+  position: relative;
+
   font-family: "Ikaros Sans", sans-serif;
 
   display: flex;
@@ -674,7 +677,8 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   font-family: "Ikaros Sans";
 }
 .orange-bg {
@@ -1016,4 +1020,16 @@ header {
     position: absolute;
     top: 0px;
     left: -200px;
+  }
+  .blue-noise {
+    background-color: rgb(52, 91, 216);
+    width: 45%;
+    height: 45%;
+    border-radius: 100%;
+    filter: blur(300px);
+  }
+  .blue1 {
+    position: absolute;
+    top: -30px;
+    right: -50px;
   }
