--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ header {
   padding-top: 3%;
   padding-left: 2%;
 
-  margin-bottom: 5%;
+  margin-bottom: 10%;
 
 }
 @media screen and (max-width: 1100px) {
@@ -403,7 +403,9 @@ header {
 .quote {
   width: 100%;
   height: auto;
-  margin: auto;
+  margin-top: 15%;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
 }
